--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build --base=/goit-js-hw-10/",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d src"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0",
