--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --base=/goit-js-hw-10/",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d src"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0",
     "glob": "^11.0.0",
     "postcss": "^8.4.41",
     "postcss-sort-media-queries": "^5.2.0",
-    "vite": "^5.4.6",
+    "vite": "^5.4.19",
     "vite-plugin-html-inject": "^1.1.2",
     "vite-plugin-html-template": "^1.2.2"
   },
